ingress/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testblog.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-wordpress
            port:
              number: 80
